--- a/views/user/loginAccount.ejs
+++ b/views/user/loginAccount.ejs
@@ -150,10 +150,8 @@
                             <div class="footer-tittle">
                                 <h4>Quick Links</h4>
                                 <ul>
-                                    <li><a href="#">About Diamond Five Star Hotel</a></li>
-                                    <li><a href="#">Our Best Rooms</a></li>
-                                    <li><a href="#">Our Photo Gellary</a></li>
-                                    <li><a href="#">Pool Service</a></li>
+                                    <li><a href="#">Về chúng tôi</a></li>
+                                    <li><a href="#">Dịch vụ nổi bật</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -163,10 +161,9 @@
                             <div class="footer-tittle">
                                 <h4>Reservations</h4>
                                 <ul>
-                                    <li><a href="#">Tel: 453-3251</a></li>
-                                    <li><a href="#">Phone No: 09125673251</a></li>
-                                    <li><a href="#">Skype: DiamondhotelBooking</a></li>
-                                    <li><a href="#">reservations@diamondhotel.com</a></li>
+                                    <li><a href="#">Số điện thoại : 0949561394</a></li>
+                                    <li><a href="#">Gmail: dotuanphog@gmail.com</a></li>
+                                    <li><a href="#">HaNoi, 19/5/2022</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -176,8 +173,7 @@
                             <div class="footer-tittle">
                                 <h4>Our Location</h4>
                                 <ul>
-                                    <li><a href="#">Purok Daisy, Brgy.Enclaro</a></li>
-                                    <li><a href="#">Binalbagan, Negros Occidental</a></li>
+                                    <li><a href="#">96A Trần Phú, P. Mộ Lao, Hà Đông, Hà Nội</a></li>
                                 </ul>
                                 <!-- Form -->
                                 <div class="footer-form">
