--- a/views/admin/search.ejs
+++ b/views/admin/search.ejs
@@ -94,7 +94,7 @@
     <footer class="sticky-footer">
       <div class="container">
         <div class="text-center">
-          <small>2022 Copyright © Hotel Management System. All Rights Reserved.</small>
+          <small>Lập trình mạng C++</small>
         </div>
       </div>
     </footer>
