--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6346,7 +6346,7 @@ h3 {
 }
 
 /*=================== contact form end ====================*/
-/* Contact Success and error Area css
+/* Liên lạc Success and error Area css
 ============================================================================================ */
 /* line 97, C:/Users/SPN Graphics/Desktop/hotel_up/Hotel_HTML/assets/scss/_contact.scss */
 .modal-message .modal-dialog {
