--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3916,7 +3916,7 @@ h3 {
   height: 100% !important; }
 
 /*=================== contact form end ====================*/
-/* Contact Success and error Area css
+/* Liên lạc Success and error Area css
 ============================================================================================ */
 .modal-message .modal-dialog {
   position: absolute;
