--- a/public/assets/scss/_contact.scss
+++ b/public/assets/scss/_contact.scss
@@ -89,7 +89,7 @@
 
 /*=================== contact form end ====================*/
 
-/* Contact Success and error Area css
+/* Liên lạc Success and error Area css
 ============================================================================================ */
 
 
