--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Admin: Home</title>
+  <title>Admin: Trang chủ</title>
   <!-- Bootstrap core CSS-->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom fonts for this template-->
@@ -62,7 +62,7 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="/admin/logout" data-toggle="modal" data-target="#exampleModal">
-            <i class="fa fa-fw fa-sign-out"></i>Logout</a>
+            <i class="fa fa-fw fa-sign-out"></i>Đăng xuất</a>
         </li>
       </ul>
     </div>
@@ -82,11 +82,11 @@
                 <tr>
                   <th>SL No.</th>
                   <th>Email</th>
-                  <th>Category</th>
+                  <th>Danh mục</th>
                   <th>Type</th>
                   <th>Quantity</th>
                   <th>Date</th>
-                  <th>Status</th>
+                  <th>Trạng thái</th>
                 </tr>
               </thead>
 
@@ -122,11 +122,11 @@
                 <tr>
                   <th>SL No.</th>
                   <th>Email</th>
-                  <th>Category</th>
+                  <th>Danh mục</th>
                   <th>Type</th>
                   <th>Quantity</th>
                   <th>Date</th>
-                  <th>Status</th>
+                  <th>Trạng thái</th>
                 </tr>
               </thead>
 
