--- a/views/user/bookingConfirm.ejs
+++ b/views/user/bookingConfirm.ejs
@@ -69,16 +69,16 @@
                             <div class="main-menu f-right d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a href="/">Home</a></li>
+                                        <li><a href="/">Trang chủ</a></li>
                                         <% if(user.length){ %>
-                                        <li><a href="/category">Category</a></li>
-                                        <li><a href="/showStatus">Status</a></li>
-                                        <li><a href="/contact">Contact</a></li>
-                                        <li><a href="/logout">Logout</a></li>
+                                        <li><a href="/category">Danh mục</a></li>
+                                        <li><a href="/showStatus">Trạng thái</a></li>
+                                        <li><a href="/contact">Liên lạc</a></li>
+                                        <li><a href="/logout">Đăng xuất</a></li>
                                         <%  } else { %>
-                                        <li><a href="/login">Login</a></li>
-                                        <li><a href="/createaccount">Create Account</a></li>
-                                        <li><a href="/contact">Contact</a></li>
+                                        <li><a href="/login">Đăng nhập</a></li>
+                                        <li><a href="/createaccount">Đăng ký</a></li>
+                                        <li><a href="/contact">Liên lạc</a></li>
                                         <% } %>
                                     </ul>
                                 </nav>
@@ -160,9 +160,7 @@
                             <div class="footer-pera">
                                 <p>
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                    Copyright &copy;
-                                    <script>document.write(new Date().getFullYear());</script> All rights reserved |
-                                    Hotel Management System<i class="ti-heart" aria-hidden="true"></i>
+                                    Lập trình mạng C++
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                 </p>
                             </div>
@@ -171,7 +169,7 @@
                     <div class="col-xl-3 col-lg-3 col-md-3 col-sm-5">
                         <div class="single-footer-caption mb-30">
                             <div class="footer-tittle">
-                                <h4>Quick Links</h4>
+                                <h4>Tổng quan</h4>
                                 <ul>
                                     <li><a href="#">Về chúng tôi</a></li>
                                     <li><a href="#">Dịch vụ nổi bật</a></li>
@@ -182,7 +180,7 @@
                     <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3">
                         <div class="single-footer-caption mb-30">
                             <div class="footer-tittle">
-                                <h4>Reservations</h4>
+                                <h4>Liên hệ</h4>
                                 <ul>
                                     <li><a href="#">Số điện thoại : 0949561394</a></li>
                                     <li><a href="#">Gmail: dotuanphog@gmail.com</a></li>
@@ -194,7 +192,7 @@
                     <div class="col-xl-3 col-lg-3 col-md-4  col-sm-5">
                         <div class="single-footer-caption mb-30">
                             <div class="footer-tittle">
-                                <h4>Our Location</h4>
+                                <h4>Địa chỉ </h4>
                                 <ul>
                                     <li><a href="#">96A Trần Phú, P. Mộ Lao, Hà Đông, Hà Nội</a></li>
                                 </ul>
@@ -205,9 +203,9 @@
                                             action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
                                             method="get" class="subscribe_form relative mail_part">
                                             <input type="email" name="email" id="newsletter-form-email"
-                                                placeholder="Email Address" class="placeholder hide-on-focus"
+                                                placeholder="Địa chỉ Email" class="placeholder hide-on-focus"
                                                 onfocus="this.placeholder = ''"
-                                                onblur="this.placeholder = ' Email Address '">
+                                                onblur="this.placeholder = ' Địa chỉ Email '">
                                             <div class="form-icon">
                                                 <button type="submit" name="submit" id="newsletter-submit"
                                                     class="email_icon newsletter-submit button-contactForm"><img
