--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Diamond || Contact Us</title>
+    <title>Diamond || Liên lạc Us</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -60,16 +60,16 @@
                             <div class="main-menu f-right d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a href="/">Home</a></li>
+                                        <li><a href="/">Trang chủ</a></li>
                                         <% if(user.length){ %>
-                                        <li><a href="/category">Category</a></li>
-                                        <li><a href="/showStatus">Status</a></li>
-                                        <li><a href="/contact">Contact</a></li>
-                                        <li><a href="/logout">Logout</a></li>
+                                        <li><a href="/category">Danh mục</a></li>
+                                        <li><a href="/showStatus">Trạng thái</a></li>
+                                        <li><a href="/contact">Liên lạc</a></li>
+                                        <li><a href="/logout">Đăng xuất</a></li>
                                         <%  } else { %>
-                                        <li><a href="/login">Login</a></li>
-                                        <li><a href="/createaccount">Create Account</a></li>
-                                        <li><a href="/contact">Contact</a></li>
+                                        <li><a href="/login">Đăng nhập</a></li>
+                                        <li><a href="/createaccount">Đăng ký</a></li>
+                                        <li><a href="/contact">Liên lạc</a></li>
                                         <% } %>
                                     </ul>
                                 </nav>
@@ -96,32 +96,28 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="contact-title">About Us Page</h2>
+                        <h2 class="contact-title">Về chúng tôi</h2>
                     </div>
                     <div class="col-lg-8">
-                      <h3>Name: Adones & Jude</h3>
-                      <p>Address: Brgy. Enclaro, Binalbagan, Negros Occidental</p>
+                   
                     </div>
                     <div class="col-lg-3 offset-lg-1">
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-home"></i></span>
                             <div class="media-body">
-                                <h3>Binalbagan, Negros Occidental, Philippines.</h3>
-                                <p>Enclaro, 6107</p>
+                                <h3>96A Trần Phú, P. Mộ Lao, Hà Đông, Hà Nội</h3>
                             </div>
                         </div>
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
                             <div class="media-body">
-                                <h3>09123456789 || 008-7000</h3>
-                                <p>Mon to Fri 9am to 6pm</p>
+                                <h3>0949561394</h3>
                             </div>
                         </div>
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-email"></i></span>
                             <div class="media-body">
-                                <h3>support@itsourcecode.com</h3>
-                                <p>Send us your query anytime!</p>
+                                <h3>dotuanphog@gmail.com</h3>
                             </div>
                         </div>
                     </div>
@@ -150,9 +146,7 @@
                             <div class="footer-pera">
                                 <p>
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                    Copyright &copy;
-                                    <script>document.write(new Date().getFullYear());</script> All rights reserved |
-                                    Hotel Management System<i class="ti-heart" aria-hidden="true"></i>
+                                    Lập trình mạng C++
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                 </p>
                             </div>
@@ -161,7 +155,7 @@
                     <div class="col-xl-3 col-lg-3 col-md-3 col-sm-5">
                         <div class="single-footer-caption mb-30">
                             <div class="footer-tittle">
-                                <h4>Quick Links</h4>
+                                <h4>Tổng quan</h4>
                                 <ul>
                                     <li><a href="#">Về chúng tôi</a></li>
                                     <li><a href="#">Dịch vụ nổi bật</a></li>
@@ -172,7 +166,7 @@
                     <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3">
                         <div class="single-footer-caption mb-30">
                             <div class="footer-tittle">
-                                <h4>Reservations</h4>
+                                <h4>Liên hệ</h4>
                                 <ul>
                                     <li><a href="#">Số điện thoại : 0949561394</a></li>
                                     <li><a href="#">Gmail: dotuanphog@gmail.com</a></li>
@@ -184,7 +178,7 @@
                     <div class="col-xl-3 col-lg-3 col-md-4  col-sm-5">
                         <div class="single-footer-caption mb-30">
                             <div class="footer-tittle">
-                                <h4>Our Location</h4>
+                                <h4>Địa chỉ </h4>
                                 <ul>
                                     <li><a href="#">96A Trần Phú, P. Mộ Lao, Hà Đông, Hà Nội</a></li>
                                 </ul>
@@ -195,9 +189,9 @@
                                             action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
                                             method="get" class="subscribe_form relative mail_part">
                                             <input type="email" name="email" id="newsletter-form-email"
-                                                placeholder="Email Address" class="placeholder hide-on-focus"
+                                                placeholder="Địa chỉ Email" class="placeholder hide-on-focus"
                                                 onfocus="this.placeholder = ''"
-                                                onblur="this.placeholder = ' Email Address '">
+                                                onblur="this.placeholder = ' Địa chỉ Email '">
                                             <div class="form-icon">
                                                 <button type="submit" name="submit" id="newsletter-submit"
                                                     class="email_icon newsletter-submit button-contactForm"><img
