--- a/views/admin/search.ejs
+++ b/views/admin/search.ejs
@@ -67,7 +67,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="/admin/logout" data-toggle="modal" data-target="#exampleModal">
-              <i class="fa fa-fw fa-sign-out"></i>Logout</a>
+              <i class="fa fa-fw fa-sign-out"></i>Đăng xuất</a>
           </li>
         </ul>
       </div>
@@ -77,11 +77,11 @@
         <% if(msg) { %>
           <h3 style="color: #17b978;" class="text-center"><%=msg%></h3><br>
         <%   } %>
-        <h2 class="text-center">Serching By Category</h2>
+        <h2 class="text-center">Serching By Danh mục</h2>
         <form action="/admin/search" method="POST">
         <div class="card mb-3">
           <div class="card-header text-center">
-            <input type="text" name="cat" class="from-control" placeholder="Category">
+            <input type="text" name="cat" class="from-control" placeholder="Danh mục">
           </div>
         </div>
         <input type="submit" style="margin-left: 50%; transform: translate(-50%,0);" type="sumit" class="btn btn-success btn-ml"
@@ -102,7 +102,7 @@
     <a class="scroll-to-top rounded" href="#page-top">
       <i class="fa fa-angle-up"></i>
     </a>
-    <!-- Logout Modal-->
+    <!-- Đăng xuất Modal-->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -113,10 +113,10 @@
               <span aria-hidden="true">×</span>
             </button>
           </div>
-          <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+          <div class="modal-body">Select "Đăng xuất" below if you are ready to end your current session.</div>
           <div class="modal-footer">
             <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-            <a class="btn btn-primary" href="login.html">Logout</a>
+            <a class="btn btn-primary" href="login.html">Đăng xuất</a>
           </div>
         </div>
       </div>
