--- a/views/admin/update.ejs
+++ b/views/admin/update.ejs
@@ -67,7 +67,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="/admin/logout" data-toggle="modal" data-target="#exampleModal">
-              <i class="fa fa-fw fa-sign-out"></i>Logout</a>
+              <i class="fa fa-fw fa-sign-out"></i>Đăng xuất</a>
           </li>
         </ul>
       </div>
@@ -85,7 +85,7 @@
                   <thead class="bg-primary text-white">
                     <tr>
                       <th>No.</th>
-                      <th>Category</th>
+                      <th>Danh mục</th>
                       <th>Room Type</th>
                       <th>Cost</th>
                       <th>Room Available</th>
@@ -136,7 +136,7 @@
         <a class="scroll-to-top rounded" href="#page-top">
           <i class="fa fa-angle-up"></i>
         </a>
-        <!-- Logout Modal-->
+        <!-- Đăng xuất Modal-->
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
           aria-hidden="true">
           <div class="modal-dialog" role="document">
@@ -147,10 +147,10 @@
                   <span aria-hidden="true">×</span>
                 </button>
               </div>
-              <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+              <div class="modal-body">Select "Đăng xuất" below if you are ready to end your current session.</div>
               <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                <a class="btn btn-primary" href="login.html">Logout</a>
+                <a class="btn btn-primary" href="login.html">Đăng xuất</a>
               </div>
             </div>
           </div>
