--- a/views/admin/updatePage.ejs
+++ b/views/admin/updatePage.ejs
@@ -67,7 +67,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="/admin/logout" data-toggle="modal" data-target="#exampleModal">
-              <i class="fa fa-fw fa-sign-out"></i>Logout</a>
+              <i class="fa fa-fw fa-sign-out"></i>Đăng xuất</a>
           </li>
         </ul>
       </div>
@@ -77,7 +77,7 @@
         <div class="row">
           <div class="col-lg-4 text-center middleposition">
            <form action="/admin/updateData" method="POST">
-            <p>Category</p>
+            <p>Danh mục</p>
             <input type="text" class="form-control" name="cat" value="<%=data.name%>" readonly>
             <p>Room Type</p>
             <input type="text" class="form-control" name="type" value="<%=data.type%>">
@@ -108,7 +108,7 @@
     <a class="scroll-to-top rounded" href="#page-top">
       <i class="fa fa-angle-up"></i>
     </a>
-    <!-- Logout Modal-->
+    <!-- Đăng xuất Modal-->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -119,10 +119,10 @@
               <span aria-hidden="true">×</span>
             </button>
           </div>
-          <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+          <div class="modal-body">Select "Đăng xuất" below if you are ready to end your current session.</div>
           <div class="modal-footer">
             <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-            <a class="btn btn-primary" href="/admin/logout">Logout</a>
+            <a class="btn btn-primary" href="/admin/logout">Đăng xuất</a>
           </div>
         </div>
       </div>
