--- a/views/user/createAccount.ejs
+++ b/views/user/createAccount.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Diamond || Create Account</title>
+    <title>Diamond || Đăng ký</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -66,10 +66,9 @@
                             <div class="main-menu f-right d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a href="/">Home</a></li>
-                                        <li><a href="/login">Login</a></li>
-                                        <li><a href="/createaccount">Create Account</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="/">Trang chủ</a></li>
+                                        <li><a href="/login">Đăng nhập</a></li>
+                                        <li><a href="/createaccount">Đăng ký</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -98,18 +97,18 @@
 
                 <div class="col-lg-4 col-md-6 col-sm-12 text-center position">
                     <form action="/createaccount" method="POST">
-                        <label>User Name</label>
-                        <input type="text" name="name" class="form-control" placeholder="User Name" required>
-                        <label>Email Address</label>
-                        <input type="text" name="mail" class="form-control" placeholder="Email Address" required>
-                        <label>Phone number</label>
-                        <input type="text" name="phone" class="form-control" placeholder="Phone number" required>
-                        <label>Password</label>
-                        <input type="password" name="pass" class="form-control" placeholder="password" required>
-                        <label>Re-enter Password</label>
-                        <input type="password" name="con_pass" class="form-control" placeholder="password" required>
+                        <label>Tên tài khoản</label>
+                        <input type="text" name="name" class="form-control" placeholder="Tên tài khoản" required>
+                        <label>Địa chỉ Email</label>
+                        <input type="text" name="mail" class="form-control" placeholder="Địa chỉ Email" required>
+                        <label>Số điện thoại</label>
+                        <input type="text" name="phone" class="form-control" placeholder="Số điện thoại" required>
+                        <label>Mật khẩu</label>
+                        <input type="password" name="pass" class="form-control" placeholder="Mật khẩu" required>
+                        <label>Điền lại mật khẩu</label>
+                        <input type="password" name="con_pass" class="form-control" placeholder="Điền lại mật khẩu" required>
 
-                        <input type="submit" value="Create Account" class="btn btn-info btn-lg mt-3">
+                        <input type="submit" value="Đăng ký" class="btn btn-info btn-lg mt-3">
                     </form>
                 </div>
 
@@ -139,9 +138,7 @@
                             <div class="footer-pera">
                                 <p>
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                    Copyright &copy;
-                                    <script>document.write(new Date().getFullYear());</script> All rights reserved |
-                                    Hotel Management System<i class="ti-heart" aria-hidden="true"></i>
+                                    Lập trình mạng C++
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                 </p>
                             </div>
@@ -150,7 +147,7 @@
                     <div class="col-xl-3 col-lg-3 col-md-3 col-sm-5">
                         <div class="single-footer-caption mb-30">
                             <div class="footer-tittle">
-                                <h4>Quick Links</h4>
+                                <h4>Tổng quan</h4>
                                 <ul>
                                     <li><a href="#">Về chúng tôi</a></li>
                                     <li><a href="#">Dịch vụ nổi bật</a></li>
@@ -161,7 +158,7 @@
                     <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3">
                         <div class="single-footer-caption mb-30">
                             <div class="footer-tittle">
-                                <h4>Reservations</h4>
+                                <h4>Liên hệ</h4>
                                 <ul>
                                     <li><a href="#">Số điện thoại : 0949561394</a></li>
                                     <li><a href="#">Gmail: dotuanphog@gmail.com</a></li>
@@ -173,7 +170,7 @@
                     <div class="col-xl-3 col-lg-3 col-md-4  col-sm-5">
                         <div class="single-footer-caption mb-30">
                             <div class="footer-tittle">
-                                <h4>Our Location</h4>
+                                <h4>Địa chỉ </h4>
                                 <ul>
                                     <li><a href="#">96A Trần Phú, P. Mộ Lao, Hà Đông, Hà Nội</a></li>
                                 </ul>
@@ -184,9 +181,9 @@
                                             action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
                                             method="get" class="subscribe_form relative mail_part">
                                             <input type="email" name="email" id="newsletter-form-email"
-                                                placeholder="Email Address" class="placeholder hide-on-focus"
+                                                placeholder="Địa chỉ Email" class="placeholder hide-on-focus"
                                                 onfocus="this.placeholder = ''"
-                                                onblur="this.placeholder = ' Email Address '">
+                                                onblur="this.placeholder = ' Địa chỉ Email '">
                                             <div class="form-icon">
                                                 <button type="submit" name="submit" id="newsletter-submit"
                                                     class="email_icon newsletter-submit button-contactForm"><img
