--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -58,16 +58,16 @@
                             <div class="main-menu f-right d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a href="/">Home</a></li>
+                                        <li><a href="/">Trang chủ</a></li>
                                         <% if(user.length){ %>
-                                        <li><a href="/category">Category</a></li>
-                                        <li><a href="/showStatus">Status</a></li>
-                                        <li><a href="/contact">Contact</a></li>
-                                        <li><a href="/logout">Logout</a></li>
+                                        <li><a href="/category">Danh mục</a></li>
+                                        <li><a href="/showStatus">Trạng thái</a></li>
+                                        <li><a href="/contact">Liên lạc</a></li>
+                                        <li><a href="/logout">Đăng xuất</a></li>
                                         <%  } else { %>
-                                        <li><a href="/login">Login</a></li>
-                                        <li><a href="/createaccount">Create Account</a></li>
-                                        <li><a href="/contact">Contact</a></li>
+                                        <li><a href="/login">Đăng nhập</a></li>
+                                        <li><a href="/createaccount">Đăng ký</a></li>
+                                        <li><a href="/contact">Liên lạc</a></li>
                                         <% } %>
                                     </ul>
                                 </nav>
@@ -142,21 +142,21 @@
                             <img src="/assets/img/customer/customar1.png" class="customar-img1" alt="">
                             <img src="/assets/img/customer/customar2.png" class="customar-img2" alt="">
                             <div class="service-experience heartbeat">
-                                <h3>25 Years of Service<br>Experience</h3>
+                                <h3>Với 25 năm kinh nghiệm</h3>
                             </div>
                         </div>
                     </div>
                     <div class=" col-xl-4 col-lg-4">
                         <div class="customer-caption">
-                            <span>About our company</span>
-                            <h2>Make the customer the hero of your story</h2>
+                            <span>Về công ty </span>
+                            <h2>Với đội ngũ dày dặn kinh nghiệm</h2>
                             <div class="caption-details">
                                 <p class="pera-dtails">Lorem ipsum dolor sit amet, consectetur adipisic- ing elit, sed
                                     do eiusmod tempor inc. </p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
                                 </p>
-                                <a href="#" class="btn more-btn1">Learn More <i class="ti-angle-right"></i> </a>
+                                <a href="#" class="btn more-btn1">Xem thêm <i class="ti-angle-right"></i> </a>
                             </div>
                         </div>
                     </div>
@@ -177,12 +177,12 @@
                     <div class="row justify-content-end">
                         <div class="col-lg-8 col-md-8">
                             <div class="dining-caption">
-                                <span>Our resturent</span>
-                                <h3>Dining & Drinks</h3>
+                                <span>Dịch vụ của chúng tôi</span>
+                                <h3>Nghỉ dưỡng & ăn uống</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod<br> tempor
                                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim <br>veniam, quis
                                     nostrud.</p>
-                                <a href="#" class="btn border-btn">Learn More <i class="ti-angle-right"></i> </a>
+                                <a href="#" class="btn border-btn">Xem thêm <i class="ti-angle-right"></i> </a>
                             </div>
                         </div>
                     </div>
@@ -194,12 +194,12 @@
                     <div class="row justify-content-start">
                         <div class="col-lg-8 col-md-8">
                             <div class="dining-caption text-right">
-                                <span>Our Pool</span>
-                                <h3>Swimming Pool</h3>
+                                <span>Bao gồm bể bơi</span>
+                                <h3>Hồ bơi lên đến 200m2</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod<br> tempor
                                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim <br>veniam, quis
                                     nostrud.</p>
-                                <a href="#" class="btn border-btn">Learn More <i class="ti-angle-right"></i></a>
+                                <a href="#" class="btn border-btn">Xem thêm <i class="ti-angle-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -255,9 +255,7 @@
                             <div class="footer-pera">
                                 <p>
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                    Copyright &copy;
-                                    <script>document.write(new Date().getFullYear());</script> All rights reserved |
-                                    Hotel Management System<i class="ti-heart" aria-hidden="true"></i>
+                                    Lập trình mạng C++
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                 </p>
                             </div>
@@ -266,7 +264,7 @@
                     <div class="col-xl-3 col-lg-3 col-md-3 col-sm-5">
                         <div class="single-footer-caption mb-30">
                             <div class="footer-tittle">
-                                <h4>Quick Links</h4>
+                                <h4>Tổng quan</h4>
                                 <ul>
                                     <li><a href="#">Về chúng tôi</a></li>
                                     <li><a href="#">Dịch vụ nổi bật</a></li>
@@ -277,7 +275,7 @@
                     <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3">
                         <div class="single-footer-caption mb-30">
                             <div class="footer-tittle">
-                                <h4>Reservations</h4>
+                                <h4>Liên hệ</h4>
                                 <ul>
                                     <li><a href="#">Số điện thoại : 0949561394</a></li>
                                     <li><a href="#">Gmail: dotuanphog@gmail.com</a></li>
@@ -289,7 +287,7 @@
                     <div class="col-xl-3 col-lg-3 col-md-4  col-sm-5">
                         <div class="single-footer-caption mb-30">
                             <div class="footer-tittle">
-                                <h4>Our Location</h4>
+                                <h4>Địa chỉ </h4>
                                 <ul>
                                     <li><a href="#">96A Trần Phú, P. Mộ Lao, Hà Đông, Hà Nội</a></li>
                                 </ul>
@@ -300,9 +298,9 @@
                                             action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
                                             method="get" class="subscribe_form relative mail_part">
                                             <input type="email" name="email" id="newsletter-form-email"
-                                                placeholder="Email Address" class="placeholder hide-on-focus"
+                                                placeholder="Địa chỉ Email" class="placeholder hide-on-focus"
                                                 onfocus="this.placeholder = ''"
-                                                onblur="this.placeholder = ' Email Address '">
+                                                onblur="this.placeholder = ' Địa chỉ Email '">
                                             <div class="form-icon">
                                                 <button type="submit" name="submit" id="newsletter-submit"
                                                     class="email_icon newsletter-submit button-contactForm"><img
